--- a/Config.ini
+++ b/Config.ini
@@ -20,11 +20,11 @@ ruleset=DIRECT,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Su
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=节点选择`select`[]自动选择`[]香港节点`[]台湾节点`[]狮城节点`[]🇯日本节点`[]美国节点`[]DIRECT
+custom_proxy_group=节点选择`select`[]自动选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]DIRECT
 custom_proxy_group=自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=苹果服务`select`[]DIRECT`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点
 custom_proxy_group=国际媒体`select`[]节点选择`[]自动选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]DIRECT
-custom_proxy_group=港台番剧`select`[]全球直连`[]台湾节点`[]香港节点
+custom_proxy_group=港台番剧`select`[]DIRECT`[]台湾节点`[]香港节点
 custom_proxy_group=漏网之鱼`select`[]节点选择`[]DIRECT`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点
 custom_proxy_group=香港节点`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
