--- a/configs/Lazy_Config.yaml
+++ b/configs/Lazy_Config.yaml
@@ -1,3 +1,6 @@
+# 可以使用任意类型的机场订阅链接替换掉proxy-providers下url: 后的「订阅链接」四字即可使用，多个链接使用英文符号的竖杠 | 隔开一起写上即可；
+# 或者将Clash订阅转换链接替换掉整个引号""内的链接内容。
+
 port: 7890
 socks-port: 7891
 allow-lan: true
@@ -38,8 +41,6 @@ proxy-providers:
   All: &All #建立锚点
     type: http
     url: "https://wild-surf-5c82.isonfm.workers.dev/sub?target=clash&url=订阅链接&list=true&udp=true"
-    # 可以使用任意类型的链接替换上面文字，多个链接使用英文符号的竖杠|隔开一起写上即可；
-    # 或者将Clash订阅链接替换掉整个引号""内的链接
     interval: 3600
     path: ./all.yaml
     health-check:
