--- a/Head/Head_complete.yml
+++ b/Head/Head_complete.yml
@@ -113,9 +113,9 @@ dns:
     - https://doh.pub/dns-query
     - https://dns.alidns.com/dns-query
     
-  fallback:
+  # fallback:
     - https://dns.google/dns-query
-    - https://1.1.1.1/dns-query
+    - https://cloudflare-dns.com/dns-query
     
   fallback-filter:
     geoip: true
