--- a/Head/General.yml
+++ b/Head/General.yml
@@ -8,31 +8,33 @@ external-controller: 127.0.0.1:9090
 dns:
   enable: true
   listen: 0.0.0.0:53
+  ipv6: false
   default-nameserver:
     - 223.5.5.5
-    - 114.114.114.114
+    - 119.29.29.29
   enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.1/16
   fake-ip-filter:
     - '*.lan'
+    - '+.cn'
+    - 'time1.cloud.tencent.com'
+    - 'music.163.com'
+    - '*.music.163.com'
+    - '*.126.net'
+    - '*.mcdn.bilivideo.cn'
+    - '*.localhost'
     - localhost.ptlogin2.qq.com
-    - '+.srv.nintendo.net'
-    - '+.stun.playstation.net'
+    - '+.baidu.com'
     - '+.msftconnecttest.com'
     - '+.msftncsi.com'
-    - '+.xboxlive.com'
-    - 'msftconnecttest.com'
-    - 'xbox.*.microsoft.com'
-    - '*.battlenet.com.cn'
-    - '*.battlenet.com'
-    - '*.blzstatic.cn'
-    - '*.battle.net'
+    - '*.alipay.com'
+    - 'dl.google.com'
   nameserver:
     - https://doh.pub/dns-query
     - https://dns.alidns.com/dns-query
   fallback:
-    - https://doh.opendns.com/dns-query
-    - https://doh.dns.sb/dns-query
+    - https://dns.google/dns-query
+    - https://cloudflare-dns.com/dns-query
   fallback-filter:
     geoip: true
     geoip-code: CN
@@ -57,6 +59,7 @@ dns:
       - +.google.cn
       - +.googleapis.cn
       - +.googleapis.com
+      - +.googlevideo.com
       - +.gvt1.com
       - +.github.com
       - +.githubusercontent.com
