--- a/Head/General.yml
+++ b/Head/General.yml
@@ -3,7 +3,7 @@ socks-port: 7891
 allow-lan: true
 bind-address: "*"
 mode: rule
-log-level: silent
+log-level: debug
 external-controller: 127.0.0.1:9090
 dns:
   enable: true
@@ -95,8 +95,8 @@ dns:
     - '*.mcdn.bilivideo.cn'
     - 'dl.google.com'
   nameserver:
-    - https://doh.pub/dns-query
     - https://dns.alidns.com/dns-query
+    - https://doh.pub/dns-query
   fallback:
     - https://doh.opendns.com/dns-query
     - https://doh.dns.sb/dns-query
