--- a/configs/Config.yaml
+++ b/configs/Config.yaml
@@ -107,8 +107,9 @@ proxy-providers:
   All: &All #建立锚点
     type: http
     url: ""
-    # 将Clash类型订阅链接粘贴在引号""内，多个链接使用英文符号的竖杠|隔开一起填上即可，
-    # 如订阅链接不支持proxy-providers，请先进行订阅转换。
+    # 以下方法任选其一⚠️有Clash订阅优先使用方法二❗️
+    # 1.可以使用任意类型的链接仅替换上面文字，多个链接使用英文符号的竖杠|隔开一起写上即可
+    # 2.Sub-Store与Clash类型订阅链接替换掉整个引号""内的链接
     interval: 3600
     path: ./all.yaml
     health-check:
