--- a/configs/Config.yaml
+++ b/configs/Config.yaml
@@ -107,9 +107,8 @@ proxy-providers:
   All: &All #建立锚点
     type: http
     url: ""
-    # 以下方法任选其一⚠️有Clash订阅优先使用方法二❗️
-    # 1.可以使用任意类型的链接仅替换上面文字，多个链接使用英文符号的竖杠|隔开一起写上即可
-    # 2.Sub-Store与Clash类型订阅链接替换掉整个引号""内的链接
+    # 强烈推荐你使用Clash类型订阅链接或Sub-Store转换订阅链接填入引号""内使用。
+    # PS：如机场没有Clash类型链接，可尝试使用通用订阅链接，如仍未解决，可通过Sub-Store或ACL4SSR等进行订阅转换。
     interval: 3600
     path: ./all.yaml
     health-check:
