--- a/configs/Config.yaml
+++ b/configs/Config.yaml
@@ -1,7 +1,12 @@
-# A Lazy Config by Coldvvater
-# 2022.06.10
+# Clash Config Make by Coldvvater
+# TG Channel: https://t.me/Ison_Channel
+# GitHub主页: https://github.com/Coldvvater
+# Update Date: 2022.06.16
+
+
 subscribe-url: 你的订阅链接
 # 替换上面文字用于Stash获取机场流量信息并在主页显示
+
 mixed-port: 7890             #本地混合代理(http和socks5合并）端口
 allow-lan: true              #允许局域网连接(false/true)
 bind-address:                #监听IP白名单（当allow-lan：true），只允许列表设备
@@ -103,7 +108,7 @@ dns:
   nameserver:                        #默认DNS服务器，支持udp/tcp/dot/doh/doq
     - https://dns.alidns.com/dns-query
     - https://doh.pub/dns-query
-#  删除#号注释便可使用 
+# 删除fallback以及下面一系列参数前面的'#'号注释便可使用
 #  fallback:                          #回落DNS服务器，支持udp/tcp/dot/doh/doq
 #    - https://8.8.4.4/dns-query
 #    - https://1.0.0.1/dns-query
