--- a/Config/Stash-Evolve.yaml
+++ b/Config/Stash-Evolve.yaml
@@ -1,4 +1,4 @@
-# Clash Config Make by Coldvvater
+# Stash Config Make by Coldvvater
 # TG Channel: https://t.me/Ison_Channel
 # GitHub主页: https://github.com/Coldvvater
 # Update Date: 2022.08.25
