--- a/Config/Clash-Evolve.yaml
+++ b/Config/Clash-Evolve.yaml
@@ -41,6 +41,8 @@ dns:
   # Fake-IP解析地址池
   fake-ip-filter:
   # Fake-ip过滤，列表中的域名返回真实ip
+  # Local Area Network
+    - '*.lan'
   # Stun Services
     - '+.stun.*.*'
     - '+.stun.*.*.*'
