--- a/Config/Clash-Evolve.yaml
+++ b/Config/Clash-Evolve.yaml
@@ -80,7 +80,7 @@ proxy-providers:
     health-check:
       enable: true
       interval: 600
-      url: http://www.gstatic.com/generate_204
+      url: http://cp.cloudflare.com/generate_204
     
   #香港节点
   HK:
@@ -131,7 +131,7 @@ proxy-groups:
     icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Auto.png
     use: 
        - All
-    url: "http://www.gstatic.com/generate_204"
+    url: "http://cp.cloudflare.com/generate_204"
     interval: 300
 
   - name: Foreign # 国外网站
