--- a/Config/Stash-Evolve.yaml
+++ b/Config/Stash-Evolve.yaml
@@ -79,7 +79,7 @@ proxy-providers:
     health-check:
       enable: true
       interval: 600
-      url: http://www.gstatic.com/generate_204
+      url: http://cp.cloudflare.com/generate_204
     
 proxies:
   # 本地服务器
@@ -105,7 +105,7 @@ proxy-groups:
     icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Auto.png
     use: 
        - All
-    url: "http://www.gstatic.com/generate_204"
+    url: "http://cp.cloudflare.com/generate_204"
     interval: 300
 
   - name: Foreign # 国外网站
